# loval-laravel-leap

./: .env  .env.desktop  .env.example  .gitignore  ACTION_PLAN_GET_UPDATE_WORKING.md  ACTIVE_PROJECTS_DATABASE_INTEGRATION.md  ACTIVE_PROJECTS_DOCS_INDEX.md  ACTIVE_PROJECTS_IMPLEMENTATION_SUMMARY.md  ACTIVE_PROJECTS_QUICK_REF.md  ACTIVE_PROJECTS_TESTING_GUIDE.md  ADD_LAST_PAGE_VISITED.md  ANNOTATION_PERFORMANCE_ANALYSIS.md  ANSWERS_YOUR_UPDATE_QUESTIONS.md  API_CONTRACT.md  APPLY_THIS_IN_SUPABASE_DASHBOARD.sql  AUTOUPDATE_DOCS_INDEX.txt  AUTO_UPDATE_GUIDE.md  AUTO_UPDATE_QUICK_REF.md  BUILD_MAC_QUICK_START.md  BUILD_SUCCESS.md  CHECKLIST_AUTOUPDATE.md  CREATE_PROJECT_MODAL_INTEGRATION.md  CREATE_PROJECT_MODAL_SUMMARY.md  DESIGN_SYSTEM.md  DETAIL_LIBRARY_MIGRATION_PLAN.md  DRAGDROP_API_DOCUMENTATION.md  DRAGDROP_CHANGELOG.md  DRAGDROP_EXECUTIVE_SUMMARY.md  DRAGDROP_FINAL_VERIFICATION.md  DRAGDROP_IMPLEMENTATION_SUMMARY.md  DRAGDROP_INDEX.md  DRAGDROP_QUICK_REFERENCE.md  DRAGDROP_README.md  DRAGDROP_TESTING_GUIDE.md  EXCALIDRAW_PATCH_README.md  FINAL_COMPLETION_REPORT.md  FORCE_SIGNOUT_DEPLOYMENT.md  FORK_STATUS_CLARIFICATION.md  GITHUB_SECRETS_SETUP.md  GIT_PUSH_COMPLETE.md  (+68 more)
excalidraw-fork 2/: LOVABLE RESPONSE 1.txt  LOVABLE RESPONSE 2.txt  WORKING_APP.md  package.json  workspace_schema_final (1).sql
patches/: @excalidraw+excalidraw+0.18.0.patch
public/: notifications_demo_modal (4).jsx
scripts/: apply-excalidraw-patch.js  check-fork.js  patch-excalidraw.ps1  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: main.rs
(+505 files in other folders)
