[package]
name = "loval-laravel-leap"
version = "1.0.0"
description = "Project and task management for construction professionals"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
